added more middleware
