# final_ims/backend/src/transactions/dto/create-transaction.dto.ts
@@ -101,4 +101,8 @@ export class CreateTransactionDto {
   @IsOptional()
   @IsString()
   status?: string;
+
+  @IsOptional()
+  @IsString()
+  receiptUrl?: string;
 }
